--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Task CRUD TS",
   "main": "app.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --pretty --transpile-only src/app.ts",
+    "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "test": "jest --forceExit"
   },
   "jest": {
@@ -19,6 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "get-port": "^7.0.0",
     "helmet": "^7.0.0",
     "jest": "^29.7.0",
     "mongo": "^0.1.0",
